--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@babel/plugin-proposal-function-bind": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
-    "babel-loader": "^8.0.6",
+    "@babel/register": "^7.8.3",
+    "babel-loader": "^8.0.0-beta.6",
     "bluebird": "^3.7.2",
     "express": "^4.17.1",
     "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.15",
     "mongoose": "^5.8.9",
+    "mysql": "^2.18.1",
     "net": "^1.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
