--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
+    "endpoint-handler": "^2.0.3",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "html-webpack-plugin": "^3.2.0",
@@ -39,13 +40,17 @@
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "redux-observable": "^1.2.0",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.5",
     "rxjs": "^6.5.4",
+    "tls": "0.0.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
