--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
+    "css-loader": "^3.4.2",
     "endpoint-handler": "^2.0.3",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
@@ -50,6 +51,7 @@
     "request": "^2.88.0",
     "request-promise": "^4.2.5",
     "rxjs": "^6.5.4",
+    "style-loader": "^1.1.3",
     "tls": "0.0.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.41.5",
