--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
+    "cookie-session": "^1.4.0",
     "css-loader": "^3.4.2",
     "endpoint-handler": "^2.0.3",
     "express": "^4.17.1",
