--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "net": "^1.0.2",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
+    "qhistory": "^1.0.3",
+    "qs": "^6.9.1",
     "react": "^16.12.0",
     "react-beautiful-dnd": "^12.2.0",
     "react-bootstrap": "^1.0.0-beta.16",
