--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express-session": "^1.17.0",
     "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "mongoose": "^5.8.9",
     "morgan": "^1.9.1",
     "net": "^1.0.2",
