--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react": "^16.12.0",
     "react-beautiful-dnd": "^12.2.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-countdown": "^2.2.0",
     "react-dom": "^16.12.0",
     "react-paginate": "^6.3.2",
     "react-redux": "^7.1.3",
