--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-countdown": "^2.2.0",
     "react-dom": "^16.12.0",
+    "react-markdown": "^4.3.1",
     "react-paginate": "^6.3.2",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
