--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "moment-with-locales-es6": "^1.0.1",
     "mongoose": "^5.8.9",
     "morgan": "^1.9.1",
     "net": "^1.0.2",
@@ -56,6 +57,7 @@
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-youtube": "^7.11.2",
     "redux": "^4.0.5",
     "redux-observable": "^1.2.0",
     "request": "^2.88.0",
