--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "node": "10.x.x"
   },
   "scripts": {
-    "test": "NODE_ENV=test mocha-webpack  --recursive --require 'server/test-globals' 'server/**/*.spec.js' --mode development --webpack-config ./webpack/webpack.config.js",
-    "dev": "NODE_ENV=development nodemon",
-    "build": "rm -rf ./server/public && webpack --config ./webpack/webpack.config.js --mode production",
-    "prod": "rm -rf ./server/public && webpack --config ./webpack/webpack.config.js --mode production && NODE_ENV=production node server/index.js",
-    "start": "NODE_ENV=production node server/index.js"
+    "test": "cross-env NODE_ENV=test mocha-webpack  --recursive --require 'server/test-globals' 'server/**/*.spec.js' --mode development --webpack-config ./webpack/webpack.config.js",
+    "dev": "cross-env NODE_ENV=development nodemon",
+    "build": "rm -rf ./server/public && cross-env NODE_ENV=production webpack --config ./webpack/webpack.config.js --mode production",
+    "prod": "rm -rf ./server/public && cross-env NODE_ENV=production webpack --config ./webpack/webpack.config.js --mode production && cross-env NODE_ENV=production node server/index.js",
+    "start": "cross-env NODE_ENV=production node server/index.js"
   },
   "repository": {
     "type": "git",
@@ -24,25 +24,19 @@
   },
   "homepage": "https://github.com/dperezferrando/frase-de-la-decada#readme",
   "dependencies": {
-    "@babel/core": "^7.8.3",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-function-bind": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
-    "@babel/preset-react": "^7.8.3",
-    "@babel/register": "^7.8.3",
-    "babel-loader": "^8.0.6",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "cookie-session": "^1.4.0",
-    "css-loader": "^3.4.2",
+    "cross-env": "^7.0.2",
     "endpoint-handler": "^2.0.3",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
-    "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.15",
+    "lodash-webpack-plugin": "^0.11.5",
+    "mini-css-extract-plugin": "^0.9.0",
     "moment": "^2.24.0",
-    "moment-with-locales-es6": "^1.0.1",
     "mongoose": "^5.8.9",
     "morgan": "^1.9.1",
     "net": "^1.0.2",
@@ -66,11 +60,21 @@
     "request": "^2.88.0",
     "request-promise": "^4.2.5",
     "rxjs": "^6.5.4",
-    "style-loader": "^1.1.3",
     "tls": "0.0.1",
+    "style-loader": "^1.1.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "webpack-bundle-analyzer": "^3.8.0",
+    "webpack-cli": "^3.3.10",
+    "@babel/core": "^7.8.3",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-function-bind": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
+    "@babel/register": "^7.8.3",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.2",
+    "html-webpack-plugin": "^3.2.0",
   },
   "devDependencies": {
     "mocha": "^7.0.0",
