--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "@babel/register": "^7.8.3",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^3.2.0"
   },
   "devDependencies": {
     "mocha": "^7.0.0",
