--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "cross-env NODE_ENV=development nodemon",
     "build": "rm -rf ./server/public && cross-env NODE_ENV=production webpack --config ./webpack/webpack.config.js --mode production",
     "prod": "rm -rf ./server/public && cross-env NODE_ENV=production webpack --config ./webpack/webpack.config.js --mode production && cross-env NODE_ENV=production node server/index.js",
-    "start": "cross-env NODE_ENV=production node server/index.js"
+    "start": "npm run prod"
   },
   "repository": {
     "type": "git",
