--- a/package.json
+++ b/package.json
@@ -24,6 +24,13 @@
   },
   "homepage": "https://github.com/dperezferrando/frase-de-la-decada#readme",
   "dependencies": {
+    "@babel/core": "^7.8.3",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-function-bind": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
+    "@babel/register": "^7.8.3",
+    "babel-loader": "^8.0.6",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
@@ -31,9 +38,12 @@
     "cookie-parser": "^1.4.4",
     "cookie-session": "^1.4.0",
     "cross-env": "^7.0.2",
+    "css-loader": "^3.4.2",
     "endpoint-handler": "^2.0.3",
     "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
     "express-session": "^1.17.0",
+    "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.15",
     "lodash-webpack-plugin": "^0.11.5",
     "mini-css-extract-plugin": "^0.9.0",
@@ -61,21 +71,12 @@
     "request": "^2.88.0",
     "request-promise": "^4.2.5",
     "rxjs": "^6.5.4",
-    "tls": "0.0.1",
     "style-loader": "^1.1.3",
+    "tls": "0.0.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.41.5",
     "webpack-bundle-analyzer": "^3.8.0",
-    "webpack-cli": "^3.3.10",
-    "@babel/core": "^7.8.3",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-function-bind": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
-    "@babel/preset-react": "^7.8.3",
-    "@babel/register": "^7.8.3",
-    "babel-loader": "^8.0.6",
-    "css-loader": "^3.4.2",
-    "html-webpack-plugin": "^3.2.0"
+    "webpack-cli": "^3.3.10"
   },
   "devDependencies": {
     "mocha": "^7.0.0",
