--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
     "cookie-session": "^1.4.0",
     "cross-env": "^7.0.2",
